--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -11,18 +11,22 @@
         android:layout_width="100dp"
         android:layout_height="130dp"
         android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/tumba"
-        tools:layout_editor_absoluteY="237dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.058"
+        app:srcCompat="@drawable/tumba" />
 
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="130dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintHorizontal_bias="0.577"
         app:layout_constraintStart_toEndOf="@+id/movieImage"
-        tools:layout_editor_absoluteY="237dp">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.058">
 
         <TextView
             android:id="@+id/movieName"
